vlib/v/checker/tests/anon_struct_assign_err.vv
struct Abc {
	name string
}

mut y := Abc{
	name: 'Abc'
}
println(y)
y = struct {
	name: 'Def'
}
println(y)
